[package]
name    = "enso-types"
version = "0.1.0"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"

[lib]

[dependencies]
nalgebra   = { version = "0.21.1", features = ["serde-serialize"] }
num-traits = { version = "0.2" }
serde      = { version = "1.0"     , features = ["derive"]        }


[dev-dependencies]
assert_approx_eq = { version = "1.1.0" }
